--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div id="fb-root"></div>
+    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v21.0&appId=9297821360234853"></script>
 
     <!-- Header -->
     <header>
@@ -187,7 +189,9 @@
         <aside class="sidebar right-sidebar">
             <p>Right Sidebar Content</p>
         </aside> -->
+        
     </div>
+    <div class="fb-like" data-href="https://www.facebook.com/profile.php?id=100068120733245" data-width="" data-layout="standard" data-action="like" data-size="large" data-share="true"></div>
 
     <footer>
         <p>© 2024 PhimPal Clone - All Rights Reserved</p>
