--- a/movie.html
+++ b/movie.html
@@ -19,12 +19,12 @@
         </div>
         <nav>
             <ul>
-                <li><a href="#">Tìm kiếm</a></li>
+                <li><a href="search.html">Tìm kiếm</a></li>
                 <li><a href="#">Phim Hot</a></li>
                 <li><a href="#">Phim Lẻ</a></li>
                 <li><a href="#">Phim Bộ</a></li>
                 <li><a href="#">Phim Mới</a></li>
-                <li><a href="#">FAQ</a></li>
+                <li><a href="faq.html">FAQ</a></li>
             </ul>
         </nav>
         <div class="user-profile">
