--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
         <nav>
             <ul>
                 <li><a href="search.html">Tìm kiếm</a></li>
-                <li><a href="#">Phim Hot</a></li>
-                <li><a href="#">Phim Lẻ</a></li>
-                <li><a href="#">Phim Bộ</a></li>
-                <li><a href="#">Phim Mới</a></li>
+                <li><a href="hot.html">Phim Hot</a></li>
+                <li><a href="odd.html">Phim Lẻ</a></li>
+                <li><a href="drama.html">Phim Bộ</a></li>
+                <li><a href="new.html">Phim Mới</a></li>
                 <li><a href="faq.html">FAQ</a></li>
             </ul>
         </nav>
@@ -37,7 +37,7 @@
 
     <div class="image-banner">
         <video autoplay loop muted playsinline class="background-video">
-            <source src="IMG/y2mate.com - Kitachan Omurice Magic Spell_1080.mp4" type="video/mp4">
+            <source src="IMG/2024-10-11 12-40-56.mkv" type="video/mp4">
             Your browser does not support the video tag.
         </video>
         <div class="overlay">
