--- a/search.html
+++ b/search.html
@@ -14,12 +14,12 @@
         </div>
         <nav>
             <ul>
-                <li><a href="#">Tìm kiếm</a></li>
-                <li><a href="#">Phim Hot</a></li>
-                <li><a href="#">Phim Lẻ</a></li>
-                <li><a href="#">Phim Bộ</a></li>
-                <li><a href="#">Phim Mới</a></li>
-                <li><a href="#">FAQ</a></li>
+                <li><a href="search.html">Tìm kiếm</a></li>
+                <li><a href="hot.html">Phim Hot</a></li>
+                <li><a href="odd.html">Phim Lẻ</a></li>
+                <li><a href="drama.html">Phim Bộ</a></li>
+                <li><a href="new.html">Phim Mới</a></li>
+                <li><a href="faq.html">FAQ</a></li>
             </ul>
         </nav>
         <div class="user-profile">
