--- a/drama.html
+++ b/drama.html
@@ -88,10 +88,10 @@
             <div class="movie-grid">
                 <div class="movie-item">
                     <a href="movie.html">
-                    <img src="IMG/1tfCj5h0FEQ5xg8hzVjQgcuGlgN.jpg" alt="Agatha All Along">
+                    <img src="IMG/tiF5I6wF6tEUy39gmNtw3G1GYyz.jpg" alt="Dan Da Dan">
                     </a>
-                    <h3>Agatha All Along</h3>
-                    <p>Agatha All Along</p>
+                    <h3>Dan Da Dan</h3>
+                    <p>Dan Da Dan</p>
                 </div>
                 <div class="movie-item">
                     <img src="IMG/lordofthering.jpg" alt="The Rings of Power">
