--- a/hot.html
+++ b/hot.html
@@ -61,10 +61,10 @@
             <div class="movie-grid">
                 <div class="movie-card">
                     <a href="movie.html">
-                    <img src="IMG/1tfCj5h0FEQ5xg8hzVjQgcuGlgN.jpg" alt="Agatha All Along">
+                    <img src="IMG/tiF5I6wF6tEUy39gmNtw3G1GYyz.jpg" alt="Dan Da Dan">
                     </a>
-                    <div class="movie-title">Agatha All Along</div>
-                    <div class="movie-subtitle">Agatha All Along</div>
+                    <div class="movie-title">Dan Da Dan</div>
+                    <div class="movie-subtitle">Dan Da Dan</div>
                     
                 </div>
                 <div class="movie-card">
@@ -94,9 +94,9 @@
             </div>
             <div class="movie-grid">
                 <div class="movie-card">
-                    <img src="IMG/1tfCj5h0FEQ5xg8hzVjQgcuGlgN.jpg" alt="Agatha All Along">
-                    <div class="movie-title">Agatha All Along</div>
-                    <div class="movie-subtitle">Agatha All Along</div>
+                    <img src="IMG/tiF5I6wF6tEUy39gmNtw3G1GYyz.jpg" alt="Dan Da Dan">
+                    <div class="movie-title">Dan Da Dan</div>
+                    <div class="movie-subtitle">Dan Da Dan</div>
                 </div>
                 <div class="movie-card">
                     <img src="IMG/8cdWjvZQUExUUTzyp4t6EDMubfO.jpg" alt="Deadpool và Wolverine">
@@ -123,9 +123,9 @@
             </div>
             <div class="movie-grid">
                 <div class="movie-card">
-                    <img src="IMG/1tfCj5h0FEQ5xg8hzVjQgcuGlgN.jpg" alt="Agatha All Along">
-                    <div class="movie-title">Agatha All Along</div>
-                    <div class="movie-subtitle">Agatha All Along</div>
+                    <img src="IMG/tiF5I6wF6tEUy39gmNtw3G1GYyz.jpg" alt="Dan Da Dan">
+                    <div class="movie-title">Dan Da Dan</div>
+                    <div class="movie-subtitle">Dan Da Dan</div>
                 </div>
                 <div class="movie-card">
                     <img src="IMG/8cdWjvZQUExUUTzyp4t6EDMubfO.jpg" alt="Deadpool và Wolverine">
