--- a/index.html
+++ b/index.html
@@ -105,45 +105,45 @@
             <div class="movie-grid">
                 <div class="movie-item">
                     <a href="movie.html">
-                    <img src="IMG/1tfCj5h0FEQ5xg8hzVjQgcuGlgN.jpg" alt="Agatha All Along">
+                    <img src="IMG/tiF5I6wF6tEUy39gmNtw3G1GYyz.jpg" alt="Dan Da Dan">
                     </a>
-                    <h3>Agatha All Along</h3>
-                    <p>Agatha All Along</p>
+                    <h3>Dan Da Dan</h3>
+                    <p>Dan Da Dan</p>
                 </div>
                 <div class="movie-item">
-                    <img src="IMG/lordofthering.jpg" alt="The Rings of Power">
-                    <h3>The Lord Of The Ring: The Rings of Power</h3>
-                    <p>Chúa tể những chiếc nhẫn</p>
+                    <img src="IMG/bocchi.jpg" alt="Bocchi the Rock!">
+                    <h3>Bocchi the Rock!</h3>
+                    <p>Tay rock Bocchi!</p>
                 </div>
                 <div class="movie-item">
-                    <img src="IMG/doremon.jpg" alt="Doraemon the Movie: Nobita's Earth Symphony">
-                    <h3>Doraemon the Movie: Nobita's Earth Symphony</h3>
-                    <p>Doraemon: Nobita và bản giao hưởng Địa Cầu</p>
+                    <img src="IMG/steingate.jpg" alt="Steins;Gate">
+                    <h3>Steins;Gate</h3>
+                    <p>Nghịch loạn thời không</p>
                 </div>
                 <div class="movie-item">
-                    <img src="IMG/insideout.jpg" alt="Inside Out 2">
-                    <h3>Inside Out 2</h3>
-                    <p>Những mảnh ghép cảm xúc 2</p>
+                    <img src="IMG/ylia.jpg" alt="Your Lie in April">
+                    <h3>Your Lie in April</h3>
+                    <p>Tháng Tư Là Lời Nói Dối Của Em</p>
                 </div>
                 <div class="movie-item">
-                    <img src="IMG/handsome.jpg" alt="Handsome Guys">
-                    <h3>Handsome Guys</h3>
-                    <p>Đẹp Trai Thấy Sai Sai</p>
+                    <img src="IMG/bleach.jpg" alt="Bleach">
+                    <h3>Bleach</h3>
+                    <p>Sứ Mệnh Thần Chết</p>
                 </div>
                 <div class="movie-item">
-                    <img src="IMG/handsome.jpg" alt="Handsome Guys">
-                    <h3>Handsome Guys</h3>
-                    <p>Đẹp Trai Thấy Sai Sai</p>
+                    <img src="IMG/sao.jpg" alt="Sword Art Online Alternative: Gun Gale Online">
+                    <h3>Sword Art Online Alternative: Gun Gale Online</h3>
+                    <p>Đao Kiếm Thần Vực: Thế giới khác</p>
                 </div>
                 <div class="movie-item">
-                    <img src="IMG/handsome.jpg" alt="Handsome Guys">
-                    <h3>Handsome Guys</h3>
-                    <p>Đẹp Trai Thấy Sai Sai</p>
+                    <img src="IMG/frieren.jpg" alt="Frieren: Beyond the Journey's End">
+                    <h3>Frieren: Beyond the Journey's End</h3>
+                    <p>Frieren: Phía sau hồi kết</p>
                 </div>
                 <div class="movie-item">
-                    <img src="IMG/handsome.jpg" alt="Handsome Guys">
-                    <h3>Handsome Guys</h3>
-                    <p>Đẹp Trai Thấy Sai Sai</p>
+                    <img src="IMG/rezero.jpg" alt="Re:ZERO - Starting Life in Another World">
+                    <h3>Re:ZERO - Starting Life in Another World</h3>
+                    <p>Re:Zero – Bắt đầu lại ở thế giới khác</p>
                 </div>
             </div>
 
